--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
-  "name": "xiaoha-battery-server",
+  "name": "xiaoha-battery-api",
   "version": "1.0.0",
-  "description": "小哈电池小组件服务器",
+  "description": "小哈电池 API 中转服务",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "node test.js"
   },
   "keywords": ["xiaoha", "battery", "widget"],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.6.2",
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "body-parser": "^1.20.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  },
-  "engines": {
-    "node": "18.x"
   }
 }
