--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "xiaoha-battery-api",
+  "name": "xiaoha-battery-relay-server",
   "version": "1.0.0",
-  "description": "小哈电池 API 中转服务",
-  "main": "index.js",
+  "description": "小哈电池中转服务器",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "node test.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": ["xiaoha", "battery", "widget"],
+  "keywords": ["xiaoha", "battery", "relay"],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
